samples/_failures_safe/1761359117_5aa7ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab8352a7.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_ab8352a7.c:182:5: error: expected expression at end of input
  182 |     for (int i = 0; i <
      |     ^~~
./samples/SAFE/__tmp_ab8352a7.c:182:5: error: expected declaration or statement at end of input
